@@ -11,6 +11,10 @@ update-manager (1:0.134.3) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeMain.py:
     - fix generation of system state file for non-existing dirs/files
       (LP: #561872)
+  * UpdateManager/UpdateManager.py:
+    - provide a LIST_TOGGLE_CHECKED column as a workaround for orca
+      that does not work with values updated via 
+      column_install.set_cell_data_func (LP: #561563)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Apr 2010 18:03:17 +0200
 
